--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+<div class="container">
+    <div class="nav">
+    </div>
+    <div class="aside">
+        <form>
+            <input type="btn" name="btnText" id="addBtnName">
+            <button id="addBtn">Add Button</button>
+        </form>
+    </div>
+    <div class="gifContainer">
+    </div>
+</div>
 
 <body>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
