now with more style

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <div class="nav">
     </div>
     <div class="gifContainer">
+        <h1 class="gifTitle">Trending</h1>
     </div>
     <div class="aside">
-    <form>
-        <input type="btn" name="btnText" id="addBtnName">
-        <button id="addBtn">Add Button</button>
-    </form>
-</div>
-
+        <form>
+            <p>Add a new TV show</p>
+            <br>
+            <input type="btn" name="btnText" id="addBtnName">
+            <button id="addBtn">Add Button</button>
+        </form>
+    </div>
 </div>
 
 <body>
